# trusty-tail

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.json  confirm-alive.crontab  confirm-alive.sh  docker-compose.dev.yml  docker-compose.yml  send-alerts.crontab  send-alerts.sh
.devcontainer/: devcontainer.json  post-create-command.sh
.github/workflows/: deploy.yaml
entity/: Cargo.toml
entity/src/: emergency_info.rs  lib.rs  prelude.rs  profiles.rs  secondary_owners.rs
migration/src/: lib.rs  m20240105_150139_create_alive_events_table.rs  m20240105_155622_create_monitoring_statuses_table.rs  m20240114_210132_create_invites_table.rs  m20240115_192831_create_profiles_table.rs
scripts/: dev.sh  init.sh
src/: config.rs  connection.rs  keyboards.rs  lib.rs  main.rs  types.rs
src/commands/: alive.rs  disable.rs  emergency_info.rs  enable.rs  menu.rs  mod.rs  owner_menu.rs  start.rs  status.rs
src/entity/: alive_events.rs  invites.rs  mod.rs  monitoring_statuses.rs  monitoring_statuses_utils.rs  profiles.rs  statuses.rs
src/migration/: m20220101_000001_create_emergency_info.rs  m20240114_210350_create_secondary_owners_table.rs  m20240222_210939_enable_monitoring.rs  mod.rs
src/modules/: alive.rs  contact_menu.rs  emergency_info.rs  invites.rs  mod.rs  owner_menu.rs  start.rs
src/profiles/: utils.rs
src/statuses/: utils.rs
templates/: alert_contact.html  alert_owner.html  contact_menu.html  emergency_info.html  emergency_info_fill.html  menu.html  owner_menu.html  start.html
